feat: function tests

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "description": "codejam",
   "version": "1.0.0",
   "scripts": {
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "mocha *.test.js"
   },
   "repository": {
     "type": "git",
